--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
-    "react-resize-detector": "^10.0.1"
+    "react-resize-detector": "^10.0.1",
+    "react-use": "^17.5.0"
   }
 }
